# embellish-folder

./: .bumpversion.cfg  .gitignore  README.md  setup.cfg
src/embellish_folder/: __init__.py  api.py  app.py  base_icons.py  cli.py  fileicon.py  read.py  version.py  write.py
tests/: test_api.py
