[metadata]
name = embellish-folder
version = attr: embellish_folder.version.__version__
description = Embellish a folder icon
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sixty-north/embellish_folder
author = Sixty North AS
author_email: systems+embellish_folder@sixty-north.com
keywords = icons
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
include_package_data = False
package_dir =
    =src
packages = find:
install_requires =
    appdirs
    click
    exit-codes
    pillow

[options.extras_require]
dev = bumpversion
doc = sphinx ; sphinx_rtd_theme ; better_apidoc
test = pytest

[options.packages.find]
where = src
